# open-agent-system

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  TODOS.md  package-lock.json  package.json  pyproject.toml
.deepagents/: AGENTS.md
.deepagents/agents/researcher/: AGENTS.md
.deepagents/skills/agent-retrieval/: SKILL.md
.deepagents/skills/agent-retrieval/agents/: openai.yaml
.deepagents/skills/agent-retrieval/references/: evidence-contract.md
.github/workflows/: ci.yml
artifacts/compatibility/: live-gate-20260722.json
deploy/cloudflare-worker/: README.md  tsconfig.json  vitest.config.ts  wrangler.jsonc
deploy/cloudflare-worker/src/: core.ts  index.ts
deploy/cloudflare-worker/test/: bundle-audit.mjs  core.test.ts  smoke.mjs
docs/: architecture.md  codex-workflow.md  compatibility-report.md  engineering-plan.md  security.md
evals/cases/: ambiguous.yaml  failures.yaml  injection.yaml  normal.yaml
integrations/nemoclaw/: ask.sh  check-platform.sh  deploy-cloudflare-mcp.sh  known-good.json  live-smoke.sh  resume-onboarding.sh  tighten-mcp-policy.sh  validate_live_thread.py  validate_mcp_session.py
mcp/research_fixture/content/: corpus.json
policies/openshell/: research-readonly.yaml
src/open_agent_system/: __init__.py  cli.py  evaluation.py  evidence.py  research_fixture.py  settings.py
tests/: test_agent.py  test_cli.py  test_evals.py  test_evidence.py  test_live_thread_validator.py  test_mcp_session_validator.py  test_policy.py  test_profile.py  test_research_fixture.py  test_settings.py
