[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "open-agent-system"
version = "0.1.0.dev0"
description = "A bounded, auditable open-agent reference system for NemoClaw and Deep Agents Code"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Joel RLH" }]
dependencies = [
  "mcp>=1.27,<2",
  "pydantic>=2.11,<3",
  "pyyaml>=6.0,<7",
]

[project.scripts]
open-agent-system = "open_agent_system.cli:main"
research-fixture = "open_agent_system.research_fixture:main"

[dependency-groups]
dev = [
  "pytest>=8.4,<10",
  "pytest-asyncio>=1.2,<2",
  "pytest-cov>=7,<8",
  "ruff>=0.12,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/open_agent_system"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.run]
source = ["open_agent_system"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"
